# AzureLabTF

./: .cache_ggshield  .gitignore  .start_time  .terraform.lock.hcl  README.md  git_log.txt  keys.tf  lab-deploy.ps1  lab-deploy.py  lab_key.pem  locals.tf  main.tf  outputs.tf  plan.txt  plan_output.txt  tfplan  variables.tf
llm-chat-session/: chat.py  pyproject.toml
llm-chat-session/llm_chat/: __init__.py  chat.py  cli.py  models.py  server.py
llm-chat-session/llm_chat/setup/: __init__.py  packages.py  venv.py
modules/gigamon-vm/: main.tf  outputs.tf  variables.tf
modules/linux-vm/: main.tf  outputs.tf  variables.tf
modules/networking/: main.tf  outputs.tf  variables.tf
prod-test/: README.md  main.tf  variables.tf
scripts/: configure_lab.py  configure_lab.py.tftpl
