[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_chat"
version = "1.0.0"
description = "Local LLM Chat using Ollama"
readme = "README.md"
authors = [{ name = "karthik4621r" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests"
]

[project.urls]
Homepage = "https://github.com/karthik4621r/vscode-local-llm-chat"
